# QOD_spondy

./: .gitignore  Pipfile  analysis.ipynb  analysis_multivar.ipynb  df.pkl  df_missforest.pkl  df_sleep.pkl  df_sleep_mv.pkl  figures.ipynb  notebook.ipynb  pyproject.toml  setup.ipynb
