[tool.poetry]
name = "spondy"
version = "0.1.0"
description = ""
authors = ["Stefan <smig88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
numpy = "^1.26.2"
notebook = "^7.0.6"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
missforest = "^2.3.2"
seaborn = "^0.13.0"
xlsxwriter = "^3.1.9"
statsmodels = "^0.14.1"
lightgbm = "^4.2.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
